# demo-agent

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml  requirements.txt
demo_agent/: agent.py  tools.py
research/: CMHC_Waterloo_Region_Housing_Data.md  Statistics_Canada_Waterloo_Region_Population_Data.md  Waterloo_Region_Housing_Affordability_Report.md  cmhc_waterloo_housing_data_2024.md  toronto_data_sources.md
